--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
         <img src="./assests/profile-pic.png" alt="Sankalp Dixit" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello I'm</p>
+        <p class="section__text__p1">Hello👋 I'm</p>
         <h1 class="title">Sankalp Dixit</h1>
-        <p class="section__text__p2">MERN Stack Developer</p>
+        <p class="section__text__p2">MERN-Stack/Blockchain Developer</p>
+        
+        
+        <!-- change -->
         <div class="btn-container">
           <!-- Change the resume-example here -->
           <button
@@ -259,16 +262,16 @@
               class="project-img"
             />
           </div>
-          <h2c class="experience-sub-title project-title">Project One</h2>
+          <h2c class="experience-sub-title project-title">Foodmine-App</h2>
             <div class="btn-container">
               <!-- change the project link here -->
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/indianguy123/Foodmine-mern.git'">
                 Github
               </button>
               <!-- change the hosted link here -->
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/indianguy123/react-movie.git'">
+              <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/indianguy123/react-movie.git'">
                 Live Demo
-              </button>
+              </button> -->
             </div>
         </div>
         <div class="details-container color-container">
@@ -280,16 +283,16 @@
               class="project-img"
             />
           </div>
-          <h2c class="experience-sub-title project-title">Project Two</h2>
+          <h2c class="experience-sub-title project-title">Chillflix Movie-API</h2>
             <div class="btn-container">
               <!-- change the project link here -->
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                 Github
               </button>
               <!-- change the hosted link here -->
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                 Live Demo
-              </button>
+              </button> -->
             </div>
         </div>
         <div class="details-container color-container">
@@ -301,16 +304,16 @@
               class="project-img"
             />
           </div>
-          <h2c class="experience-sub-title project-title">Project Three</h2>
+          <h2c class="experience-sub-title project-title">Decentralized Drive</h2>
             <div class="btn-container">
               <!-- change the project link here -->
               <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                 Github
               </button>
               <!-- change the hosted link here -->
-              <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+              <!-- <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
                 Live Demo
-              </button>
+              </button> -->
             </div>
         </div>
         </div>
